bluetooth: macOS: Adding histograms for NSError values

Patch set 1: crrev.com/2912633002 reverted by crrev.com/c/620327
Patch set 4: Adding definition of CBErrorMaxConnection when Chromium is compiled
with 10.10 or earlier.

Bug: 755590
Change-Id: Ifc9771816245ceb189d63f4ff59ff9de5bc1d8c5